# tinyraytracer

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
src/: constant.h  light.h  main.cpp  material.h  sphere.h  vector.h
